<resources>
    <string name="clicker_beta">BTa</string>
    <string name="clicker_De_beta">**</string>

    <string name="app_name">InyedaShares</string>
    <string name="fill_data">datapost</string>

    <string name="fill_data_fundname">Name</string>
    <string name="fill_data_amount">Amount Partys</string>
    <string name="fill_data_fundvalue">Value</string>
    <string name="fill_data_inlay">Inlay</string>

    <string name="fill_unit_spac">\t \t</string>
    <string name="fill_unit_resv">\t*\t</string>
    <string name="fill_unit_perc">\t%\t</string>
    <string name="fill_data_reserve">\t****\t</string>
    <string name="fill_data_reserve2">servee</string>
    <!--string name="fill_data_amount">Cancel</string -->
    <string name="switcher_OnOff"> </string>
    <string name="clicker_CopytoFirebase">F-Base</string>
    <string name="clicker_OnLock">unLOCK</string>
    <string name="clicker_DeLock">LOCKed</string>
    <string name="clicker_Calculate">Calc.</string>
    <string name="clicker_De_Calculate">Calc. Off</string>
    <string name="clicker_submit">Submit</string>
    <string name="clicker_cancel">Cancel</string>
    <string name="clicker_refresh_data">Refresh</string>
    <string name="clicker_view_data">View</string>
    <string name="title_row_user">User</string>
    <string name="title_row_date">Date</string>
    <string name="fundnameold">OLfundname</string>
    <string name="title_row_totalvalueold">TotalValueOld</string>
    <string name="title_row_totalvalue">TotalValue</string>
    <string name="title_row_profitday">Profit/day</string>
    <string name="title_row_profittotal">ProfitTotal</string>
    <string name="title_row_percentageday">% Daily</string>
    <string name="title_row_percentagetotal">% Total</string>
    <string name="fundnamea">P0fundname</string>
    <string name="afpartyvaluea">afpartyvalue</string>
    <string name="amountax">P0amountx</string>
    <string name="amountay">P0amounty</string>
    <string name="amountaz">P0amountz</string>
    <string name="amountaxyz">P0amountxyz</string>
    <string name="astotalfunda">astotalfund</string>
    <string name="atmultigrowa">atmultigrow</string>
    <string name="autotalgrowa">autotalgrow</string>
    <string name="avmultiperca">avmultiperc</string>
    <string name="awtotalperca">awtotalperc</string>
    <string name="acpartyfunda">acpartyfund</string>
    <string name="adpartygrowa">adpartygrow</string>
    <string name="aepartyperca">aepartyperc</string>

    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
    <!--string name="title_row_user">Cancel</string -->
</resources>